--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   justify-content: center;
   border-radius: 5px;
   background: #293447;
-  box-shadow: 0 20px 40px rgba(52, 87, 220, 0.2);
+  box-shadow: 20px 20px 40px rgba(52, 87, 220, 0.3);
 }
 
 .game-details {
@@ -53,21 +53,6 @@ body {
   background: #60cbff;
 }
 
-.controls {
-  display: none;
-  justify-content: space-between;
-}
-
-.controls i {
-  padding: 25px 0;
-  text-align: center;
-  font-size: 1.3rem;
-  color: #b8c6dc;
-  width: calc(100% / 4);
-  cursor: pointer;
-  border-right: 1px solid #171b26;
-}
-
 @media screen and (max-width: 800px) {
   .wrapper {
     width: 90vmin;
@@ -77,14 +62,5 @@ body {
   .game-details {
     font-size: 1rem;
     padding: 15px 27px;
-  }
-
-  .controls {
-    display: flex;
-  }
-
-  .controls i {
-    padding: 15px 0;
-    font-size: 1rem;
   }
 }
